--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-13.19MB/s(Youtube:不良林), server: 116.63.103.11, port: 45250, type: vmess, uuid: 95987eb1-bf18-4e33-b6c6-8742cc3cf8fd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.63.103.11}}
-  - {name: 🇺🇸 美国-1.05MB/s(Youtube:不良林), server: 51.81.223.20, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.68MB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.38MB/s(Youtube:不良林), server: io.aicdn.online, port: 12014, type: vmess, uuid: d99de001-19cb-340e-a00d-2895d2019138, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /play.m3u8, ws-headers: {Host: io.aicdn.online}}
-  - {name: 🇨🇳 中国-4.72MB/s(Youtube:不良林), server: aiajp1.game.www.klrxyru.cn, port: 1460, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇭🇰 香港-3.19MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
-  - {name: 🇯🇵 日本-2.83MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.25MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.02MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.92MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.67MB/s(Youtube:不良林), server: 213.183.53.208, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
+  - {name: 保加利亚-854.6KB/s(Youtube:不良林), server: 213.183.63.217, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
+  - {name: 保加利亚-1.88MB/s(Youtube:不良林), server: 213.183.63.217, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
+  - {name: 🇯🇵 日本-705.1KB/s(Youtube:不良林), server: 185.172.113.182, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-2.99MB/s(Youtube:不良林), server: aiaus1.game.www.klrxyru.cn, port: 1420, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林), server: 213.183.53.208, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
+  - {name: 🇷🇺 俄罗斯联邦-2.32MB/s(Youtube:不良林), server: 213.183.53.208, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
+  - {name: 🇷🇺 俄罗斯联邦-3.12MB/s(Youtube:不良林), server: 213.183.53.208, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇺🇸 美国-3.75MB/s(Youtube:不良林), server: 38.75.136.102, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇺🇸 美国-3.19MB/s(Youtube:不良林), server: 38.75.136.102, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-13.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.72MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.83MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.67MB/s(Youtube:不良林)
+      - 保加利亚-854.6KB/s(Youtube:不良林)
+      - 保加利亚-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-705.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.32MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-13.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.72MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.83MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.67MB/s(Youtube:不良林)
+      - 保加利亚-854.6KB/s(Youtube:不良林)
+      - 保加利亚-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-705.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.32MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-13.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.72MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.83MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.67MB/s(Youtube:不良林)
+      - 保加利亚-854.6KB/s(Youtube:不良林)
+      - 保加利亚-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-705.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.32MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-13.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.72MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.83MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.67MB/s(Youtube:不良林)
+      - 保加利亚-854.6KB/s(Youtube:不良林)
+      - 保加利亚-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-705.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.32MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-13.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.72MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.83MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.67MB/s(Youtube:不良林)
+      - 保加利亚-854.6KB/s(Youtube:不良林)
+      - 保加利亚-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-705.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.32MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-13.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.72MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.83MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.67MB/s(Youtube:不良林)
+      - 保加利亚-854.6KB/s(Youtube:不良林)
+      - 保加利亚-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-705.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.32MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-13.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.72MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.83MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.67MB/s(Youtube:不良林)
+      - 保加利亚-854.6KB/s(Youtube:不良林)
+      - 保加利亚-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-705.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.32MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
