--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 保加利亚-1.41MB/s(Youtube:不良林), server: 213.183.63.218, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 🇨🇳 中国-1.06MB/s(Youtube:不良林), server: aiajp1.game.www.klrxyru.cn, port: 1460, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇷🇺 俄罗斯联邦-2.67MB/s(Youtube:不良林), server: 213.183.53.208, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
   - {name: 🇫🇷 法国-833.0KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇷🇺 俄罗斯联邦-3.70MB/s(Youtube:不良林), server: 213.183.53.208, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
-  - {name: 🇨🇳 台湾-11.59MB/s(Youtube:不良林), server: 211.23.149.95, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.99MB/s(Youtube:不良林), server: aiaus1.game.www.klrxyru.cn, port: 1420, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 保加利亚-854.6KB/s(Youtube:不良林), server: 213.183.63.217, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
+  - {name: 保加利亚-1.50MB/s(Youtube:不良林), server: 213.183.63.217, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
   - {name: 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林), server: 213.183.53.208, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
   - {name: 🇷🇺 俄罗斯联邦-2.32MB/s(Youtube:不良林), server: 213.183.53.208, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
   - {name: 🇷🇺 俄罗斯联邦-3.12MB/s(Youtube:不良林), server: 213.183.53.208, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 保加利亚-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.67MB/s(Youtube:不良林)
       - 🇫🇷 法国-833.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.70MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
-      - 保加利亚-854.6KB/s(Youtube:不良林)
+      - 保加利亚-1.50MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.32MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.12MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 保加利亚-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.67MB/s(Youtube:不良林)
       - 🇫🇷 法国-833.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.70MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
-      - 保加利亚-854.6KB/s(Youtube:不良林)
+      - 保加利亚-1.50MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.32MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.12MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 保加利亚-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.67MB/s(Youtube:不良林)
       - 🇫🇷 法国-833.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.70MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
-      - 保加利亚-854.6KB/s(Youtube:不良林)
+      - 保加利亚-1.50MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.32MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.12MB/s(Youtube:不良林)
@@ -66,18 +66,17 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-11.59MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 保加利亚-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.67MB/s(Youtube:不良林)
       - 🇫🇷 法国-833.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.70MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
-      - 保加利亚-854.6KB/s(Youtube:不良林)
+      - 保加利亚-1.50MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.32MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.12MB/s(Youtube:不良林)
@@ -88,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 保加利亚-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.67MB/s(Youtube:不良林)
       - 🇫🇷 法国-833.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.70MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
-      - 保加利亚-854.6KB/s(Youtube:不良林)
+      - 保加利亚-1.50MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.32MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.12MB/s(Youtube:不良林)
@@ -104,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 保加利亚-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.67MB/s(Youtube:不良林)
       - 🇫🇷 法国-833.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.70MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
-      - 保加利亚-854.6KB/s(Youtube:不良林)
+      - 保加利亚-1.50MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.32MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.12MB/s(Youtube:不良林)
@@ -129,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 保加利亚-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.67MB/s(Youtube:不良林)
       - 🇫🇷 法国-833.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.70MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
-      - 保加利亚-854.6KB/s(Youtube:不良林)
+      - 保加利亚-1.50MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.32MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.12MB/s(Youtube:不良林)
