--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 保加利亚-1.41MB/s(Youtube:不良林), server: 213.183.63.218, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
-  - {name: 🇨🇳 中国-1.06MB/s(Youtube:不良林), server: aiajp1.game.www.klrxyru.cn, port: 1460, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇨🇳 中国-6.38MB/s(Youtube:不良林), server: io.aicdn.online, port: 12019, type: vmess, uuid: d99de001-19cb-340e-a00d-2895d2019138, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /cctv5.m3u8, ws-headers: {Host: 361641818-server.s0.aicdn.com}}
+  - {name: 保加利亚-1.06MB/s(Youtube:不良林), server: 213.183.63.218, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
+  - {name: 保加利亚-206.2KB/s(Youtube:不良林), server: 213.183.63.217, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
+  - {name: 🇨🇳 中国-2.23MB/s(Youtube:不良林), server: aiasgp1.game.www.klrxyru.cn, port: 1520, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 保加利亚-198.3KB/s(Youtube:不良林), server: 213.183.63.217, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
   - {name: 🇷🇺 俄罗斯联邦-2.67MB/s(Youtube:不良林), server: 213.183.53.208, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
-  - {name: 🇫🇷 法国-833.0KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 保加利亚-1.50MB/s(Youtube:不良林), server: 213.183.63.217, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
   - {name: 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林), server: 213.183.53.208, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
   - {name: 🇷🇺 俄罗斯联邦-2.32MB/s(Youtube:不良林), server: 213.183.53.208, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
-  - {name: 🇷🇺 俄罗斯联邦-3.12MB/s(Youtube:不良林), server: 213.183.53.208, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
   - {name: 🇺🇸 美国-3.75MB/s(Youtube:不良林), server: 38.75.136.102, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
   - {name: 🇺🇸 美国-3.19MB/s(Youtube:不良林), server: 38.75.136.102, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 保加利亚-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
+      - 保加利亚-1.06MB/s(Youtube:不良林)
+      - 保加利亚-206.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
+      - 保加利亚-198.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.67MB/s(Youtube:不良林)
-      - 🇫🇷 法国-833.0KB/s(Youtube:不良林)
-      - 保加利亚-1.50MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.32MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 保加利亚-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
+      - 保加利亚-1.06MB/s(Youtube:不良林)
+      - 保加利亚-206.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
+      - 保加利亚-198.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.67MB/s(Youtube:不良林)
-      - 🇫🇷 法国-833.0KB/s(Youtube:不良林)
-      - 保加利亚-1.50MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.32MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 保加利亚-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
+      - 保加利亚-1.06MB/s(Youtube:不良林)
+      - 保加利亚-206.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
+      - 保加利亚-198.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.67MB/s(Youtube:不良林)
-      - 🇫🇷 法国-833.0KB/s(Youtube:不良林)
-      - 保加利亚-1.50MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.32MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 保加利亚-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
+      - 保加利亚-1.06MB/s(Youtube:不良林)
+      - 保加利亚-206.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
+      - 保加利亚-198.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.67MB/s(Youtube:不良林)
-      - 🇫🇷 法国-833.0KB/s(Youtube:不良林)
-      - 保加利亚-1.50MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.32MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 保加利亚-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
+      - 保加利亚-1.06MB/s(Youtube:不良林)
+      - 保加利亚-206.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
+      - 保加利亚-198.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.67MB/s(Youtube:不良林)
-      - 🇫🇷 法国-833.0KB/s(Youtube:不良林)
-      - 保加利亚-1.50MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.32MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 保加利亚-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
+      - 保加利亚-1.06MB/s(Youtube:不良林)
+      - 保加利亚-206.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
+      - 保加利亚-198.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.67MB/s(Youtube:不良林)
-      - 🇫🇷 法国-833.0KB/s(Youtube:不良林)
-      - 保加利亚-1.50MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.32MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 保加利亚-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
+      - 保加利亚-1.06MB/s(Youtube:不良林)
+      - 保加利亚-206.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
+      - 保加利亚-198.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.67MB/s(Youtube:不良林)
-      - 🇫🇷 法国-833.0KB/s(Youtube:不良林)
-      - 保加利亚-1.50MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.32MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
 rules:
